--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
-include README.md requirements.txt LICENSE
+include README.rst requirements.txt LICENSE
 include EasyEuler/config.json
 graft EasyEuler/data
 graft EasyEuler/templates
