--- a/EasyEuler/config.json
+++ b/EasyEuler/config.json
@@ -1,40 +1,35 @@
 {
-    "languages": [
+    "languages": {
+        "python":
         {
-            "name": "python",
             "extension": "py",
             "command": "python {path}",
             "template": "python"
         },
-        {
-            "name": "c",
+        "c": {
             "extension": "c",
             "command": "gcc -o {path}.out {path} && ./{path}.out && rm {path}.out",
             "template": "c"
         },
-        {
-            "name": "ruby",
+        "ruby": {
             "extension": "rb",
             "command": "ruby {path}",
             "template": "ruby"
         },
-        {
-            "name": "javascript",
+        "javascript": {
             "extension": "js",
             "command": "node {path}",
             "template": "javascript"
         },
-        {
-            "name": "haskell",
+        "haskell": {
             "extension": "hs",
             "command": "runhaskell {path}",
             "template": "haskell"
         },
-        {
-            "name": "c++",
+        "c++": {
             "extension": "cpp",
             "command": "gcc -o {path}.out {path} && ./{path}.out && rm {path}.out",
             "template": "c"
         }
-    ]
+    }
 }
