Add more configuration options
Added configuration options for filename format and default language

--- a/EasyEuler/config.json
+++ b/EasyEuler/config.json
@@ -1,4 +1,6 @@
 {
+    "filename_format": "euler_{id:0>3}.{extension}",
+    "default_language": "python",
     "languages": {
         "python":
         {
