Fix MANIFEST.in not including resources

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
 include README.rst requirements.txt LICENSE
 include EasyEuler/config.json
-recursive-include EasyEuler/data problems.json resources
+recursive-include EasyEuler/data problems.json resources/*
 graft EasyEuler/templates
